Rename Kapa's JS lib to libnumguess.js

--- a/num_domwindow.html
+++ b/num_domwindow.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>Welcome to NumGuess Javascript (DOM Window) version!</title>
-<script type="text/javascript" src="numguess.js"></script>
+<script type="text/javascript" src="libnumguess.js"></script>
 <script>
 (function (glob, undefined) {
 
