--- a/num_jquery.html
+++ b/num_jquery.html
@@ -23,7 +23,7 @@
 	</style>
 	
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	<script type="text/javascript" src="numguess.js"></script>
+	<script type="text/javascript" src="libnumguess.js"></script>
 	
 	<script type="text/javascript">
 		$(function() {
