Refine play prompt guidelines and update programs
The guidelines now state how the play again prompt should work and
what the default value should be. Also updated all compliant
programs.

--- a/num_jquery.html
+++ b/num_jquery.html
@@ -65,7 +65,7 @@
 				if(!NumGuessEngine.guess(guess)) {
 					getGuess();
 				} else {
-					show('Play again [Y/N]? ');
+					show('Play again [y/N]? ');
 					input(function(again) {
 						if(again && again.toString().toUpperCase() == 'Y') {
 							show();
