JS: Remove displayMethod from lib, use show
Remove unnecessary method, we can just use and override .show()
directly.

--- a/num_domwindow.html
+++ b/num_domwindow.html
@@ -5,7 +5,7 @@
 (function(global) {
 
 	var engine = global.NumGuessEngine;
-	engine.displayMethod = function(s) {
+	engine.show = function(s) {
 		alert(s);
 	};
 	var g;
