--- a/num_jquery.html
+++ b/num_jquery.html
@@ -81,7 +81,7 @@
 
 			// Initialise
 
-			NumGuessEngine.displayMethod = show;
+			NumGuessEngine.show = show;
 			NumGuessEngine.welcome();
 			show('\nEnter your name: ');
 			input(function(name) {
