JS: Minor HTML cleanup

--- a/num_domwindow.html
+++ b/num_domwindow.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <title>NumGuess Javascript DOM Window version</title>
-<script type="text/javascript" src="libnumguess.js"></script>
+<script src="libnumguess.js"></script>
 <script>
 (function() {
 
