JavaScript: Customisable welcome message
All JavaScript implementations can display a different welcome message
by changing the NumGuessEngine.language property.

--- a/num_jquery.html
+++ b/num_jquery.html
@@ -80,6 +80,7 @@
 
 			// Initialise
 
+			engine.language = 'HTML/jQuery';
 			engine.show = show;
 			engine.console = true;
 			engine.welcome();
