--- a/num_domwindow.html
+++ b/num_domwindow.html
@@ -7,6 +7,7 @@
 	var engine = NumGuessEngine;
 	var name, guess;
 
+	engine.language = 'JavaScript DOM Window';
 	engine.show = alert.bind(window);
 
 	do {
